updated swagger docs and fixed swagger configuration errors
